# time-shift-proxmox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_ANALYSIS.md  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION.md  PAT-FILE-AUTH.md  QUICKSTART.md  README.md  SECURITY_IMPROVEMENTS.md  SETUP_SCRIPTS.md  TERMINAL-SOLUTION.md  browser-auth.sh  consolidated.md  easy-git-auth.sh  fix-installation.sh  generate_pdf.sh  git-clone-easy.sh  install.sh  instant-setup.sh  integrate.py  interactive-git-setup.sh  master.py  one-click-setup.sh  pat-setup.sh  pyproject.toml  quick-setup.sh  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt  run_tests.sh  scrub-api-keys.sh  setup-github-token.sh  setup-secure-token.sh  setup.sh  time-shift-idrac.sh  (+2 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  summary.yml
docker/: start.sh
docs/: GITHUB_AUTH.md  PERPLEXITY_CONVERSATION.md  Perplexity.md  VSCODE_PERPLEXITY_SETUP.md  Working on installing proxmox and my server sittin.md
docs/.prompts/: ai-key-management-passwords_app-mac-osx.md  scratchpad.md
etc/: project_config.json  time-shift-config.json
etc/security/: README.md  STRUCTURE.md  command-permissions.json  execution-policy.yaml
integrations/docker-compose/: manifest.yaml
integrations/proxmox-deploy/: manifest.yaml
lib/: config_models.py  config_templating.py  health_checks.py  integration_plugins.py  network_tools.py  proxmox_api.py  proxmox_api_async.py  secure_token_storage.py  security.py  time_ops.py  validators.py
scripts/: README.md  command-permissions.json  consolidate-setup.sh  proxmox_docker_vm_complete.sh  safe-commands-enhanced.sh  safe-commands.sh  setup-vscode-mcp.sh
tests/: test_config_models.py  test_health_checks.py  test_integration_plugins.py  test_master.py  test_network_tools.py  test_proxmox_api.py  test_security.py  test_time_ops.py
usr/local/share/time-shift/: README.md
